--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
@@ -25,4 +29,6 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.google.code.gson:gson:2.8.4'
     implementation 'me.jfenn:attribouter:0.1.1'
+    implementation 'com.cronutils:cron-utils:6.0.6'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.0.3'
 }
