added notifications but theres an infinite loop somewhere so rip

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.MainActivity"/>
+        <receiver android:name=".receivers.MonitorReceiver"/>
     </application>
 
 </manifest>
