--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: android
 android:
   components:
-  - tools
-  - platform-tools
-  - build-tools-28.0.3
-  - android-28
-  - extra-google-google_play_services
-  - extra-google-m2repository
-  - extra-android-m2repository
+    - tools
+    - platform-tools
+    - build-tools-28.0.3
+    - android-28
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - extra-android-m2repository
 jdk:
   - oraclejdk8
 before_install:
@@ -15,22 +15,25 @@ before_install:
   - tar -xvf secrets.tar --overwrite
   - chmod +x gradlew
 script:
-  - if [ "$TRAVIS_BRANCH" = "develop" ]; then ./gradlew build; fi
-  - if [ "$TRAVIS_BRANCH" = "master" ]; then ./gradlew publish; fi
+  - if [ "$TRAVIS_TAG" != "" ]; then ./gradlew publish; else ./gradlew build; fi
 before_deploy:
-  - export BODY=$(cat app/src/main/play/release-notes/en-US/default.txt)
-  - export VERSION=$(./gradlew -q :app:printVersionName)
+  - export RELEASE_VERSION=$TRAVIS_TAG
+  - export RELEASE_CHANGELOG=$(cat app/src/main/play/release-notes/en-US/default.txt)
+  - export RELEASE_FILE="app/build/outputs/apk/*/*.apk"
 deploy:
+  - provider: script
+    skip_cleanup: true
+    script: bash ./.scripts/deploy.sh
+    on:
+      branch: master
+      tags: true
   - provider: releases
+    api_key: "$GITHUB_TOKEN"
     skip_cleanup: true
     overwrite: true
-    name: "${VERSION}"
-    tag_name: "${VERSION}"
-    body: "${BODY}"
-    prerelease: true
-    api_key: "$GITHUB_TOKEN"
     file_glob: true
-    file: app/build/outputs/apk/release/*
+    file: "$RELEASE_FILE"
+    tag_name: "$RELEASE_VERSION"
     on:
-      repo: fennifith/Cronhub-Monitor
       branch: master
+      tags: true
